--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
 	},
 	"prisma": {
 		"seed": "node prisma\\seed.js"
-	  },
+	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"@prisma/client": "^5.14.0",
+		"axios": "^1.7.2",
+		"body-parser": "^1.20.2",
+		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
-		"nodemon": "^3.1.0"
+		"nodemon": "^3.1.0",
+		"qs": "^6.12.1"
 	}
 }
